2018-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcd.c: Fix many issues, including oss-fuzz 6016
	"graphicsmagick/coder_PCD_fuzzer: Heap-double-free in
	MagickRealloc" and oss-fuzz 6108 "graphicsmagick/coder_PCD_fuzzer:
	Unknown signal in AllocateThreadViewDataSet". (Credit to OSS-Fuzz)

2018-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (funcDCM_BitsStored): Limit DICOM significant bits
	to 16.  Otherwise rescale map code blows up.  Fixes oss-fuzz 7435
	"graphicsmagick/coder_DCM_fuzzer: Out-of-memory in
	graphicsmagick_coder_DCM_fuzzer". (Credit to OSS-Fuzz)

	* coders/pix.c (ReadPIXImage): Detect EOF.  Reject RLE lenth of
	zero.  Fixes oss-fuzz 7440 "graphicsmagick/coder_PIX_fuzzer:
	Out-of-memory in graphicsmagick_coder_PIX_fuzzer". (Credit to
	OSS-Fuzz)

2018-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Insist on having an element
	descriptor we understand since otherwise we can not decode the
	image.  Fixes oss-fuzz 7410 "graphicsmagick/coder_DPX_fuzzer:
	Use-of-uninitialized-value in WriteDPXImage". (Credit to OSS-Fuzz)

	* coders/avs.c, etc... (WriteAVSImage): Cache image list length
	before writing image sequence so that progress monitor is
	scalable.  Helps with oss-fuzz 7404
	"graphicsmagick/coder_AVS_fuzzer: Timeout in
	graphicsmagick_coder_AVS_fuzzer". (Credit to OSS-Fuzz)

2018-04-03  Greg Wolfe  <gregory.wolfe@kodakalaris.com>

	* coders/svg.c (SVGStartElement, SVGEndElement),
	magick/render.c (DrawImage): The current text position
	is now maintained by DrawImage() instead of by
	SVGStartElement() and SVGEndElement().  This change was
	made to support the recentely implmemented "use" and
	"class" elements, which may make changes to the font
	size that are not visible to the code in svg.c.

	* coders/svg.c (GetStyleTokens, SVGStartElement): The
	list of SVG attributes is now reordered so that
	"font-size", "class", and "style" are processed first.